Fixed overlapping content over sidebar in proposal.jsp. Renamed admin.css to chairman.css. Created sidenavbar.css from chairman.css.

--- a/src/main/webapp/WEB-INF/css/sidenavbar.css
+++ b/src/main/webapp/WEB-INF/css/sidenavbar.css
@@ -59,22 +59,4 @@ a, a:hover, a:focus {
 #content {
     text-align: center;
     padding-left: 250px;
-    position:relative;
-    margin: 0 auto;
 }
-
-#window{
-    width: 1000px;
-    border:solid 1px;
-    position:relative;
-    margin: 0 auto;
-}
-
-#box1{
-    background: #DFDFDF;
-}
-
-#box2{
-    background: #DFDFDF;
-}
-
